Turn .spoty_container to a flexbox and fix .spoty's size
.spoty can shrink down in a flexbox (.spoty_container) that's 100% of
the page's width. It has 50px side margins and a 50px gap between the
button and the text for when the page is too small. Its maxwidth is
938px.

--- a/style.css
+++ b/style.css
@@ -175,15 +175,24 @@ main {
 	margin-top: 2px;
 }
 
+.spoty_container { /* .spoty shrinks and flexes here */
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+
 .spoty {
 	background-color: #f63838;
 	padding: 40px 80px;
-	margin: 0 100px 80px;
+	margin: 0 50px 80px;
+	max-width: 938px;
 	border-radius: 8px;
+	flex: 1 0 537px;
 
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	gap: 50px;
 }
 
 .spoty_text {
